# MembranePotentialMapping

./: CMakeLists.txt  LICENSE  Makefile  Makefile_vm2ug  README.md  TODO  bg.cc  bg.cpp  bg.h  cmake_install.cmake  common_typedefs.h  config_cmake.h  gating.cc  gating.h  hoc_command.cpp  hoc_command.h  hoc_command_impl.h  mpms.h  mvec.cpp  mvec.h  mvec_impl.h  my_commands.cc  my_commands.h  neuron.lua  neuron_mpm.h  plugin_main.cpp  plugin_main.cpp.bak  solve.cc  solve.h  transform.cpp  transform.h  transformator.cpp  transformator.h  transformator_impl.h  vm2ug.cc  vm2ug.cpp  vm2ug.h  vm2ug.hh  vm2ug.icc  vm2ug_impl.h  (+3 more)
a_u_x/: edge_utilities_impl.hpp
aux/: aux_bridge.cpp  edge_utilities.h  edge_utilities_impl.hpp
auxiliary/: edge_utilities_impl.hpp
bg_default/: bg.cpp  bg.h  gating.cpp  gating.h  my_commands.cpp  my_commands.h  solve.cpp  solve.h  spannung.cpp  spannung.h  vm2ug_impl.h  voltage.h
bg_erroneaus/: gating.cpp  gating.h  my_commands.h  solve.cpp
bg_simple/: CMakeLists.txt  bg.cpp  bg.h  calculated_values.gdt  gating.cpp  gating.h  my_commands.cpp  my_commands.h  plugin_main.cpp  solve.cpp  solve.h  spannung.cpp  spannung.h  vm2ug_impl.h  voltage.cpp  voltage.h
bg_test/: Makefile  bg.h  main  main.cc  my_commands.cc  my_commands.h
bg_test/.deps/: bg.P  gating.P  main.P  my_commands.P  solve.P
bg_userdef/: spannung.cpp  spannung.h
bg_vm2ug/: bg.cpp  bg.h  gating.cpp  gating.h  my_commands.cpp  my_commands.h  plugin_main.cpp  solve.cpp  solve.h  spannung.cpp  spannung.h
decorator/: clamp_decorator.cpp  clamp_decorator.h  clamp_decorator_impl.cpp  clamp_decorator_impl.h  hoc_command.cpp  hoc_command.h  hoc_decorator.cpp  hoc_decorator.h  parallel_hoc_command.cpp  parallel_hoc_command.h  parallel_hoc_command_impl.cpp  parallel_hoc_command_impl.h  plain_decorator.cpp  plain_decorator.h  plain_decorator_impl.cpp  plain_decorator_impl.h  serial_hoc_command.cpp  serial_hoc_command.h  serial_hoc_command_impl.cpp  serial_hoc_command_impl.h
docs/: README.txt
docs/additional_pages/: main.doxygen
docs/matlab/: bg.m  bg_cfp.m  bg_ohmic.m
example/: neuron.lua
kdtree/: kd_node.h  kd_tree.cpp  kd_tree.h  kd_tree_impl.h  kdtree.h
libs/: NNVM.cpp  NNVM.h  NNVMTree.h  NNVMTree_impl.h  NNVM_impl.h
old_bg/errorneaus/: bg.cpp  bg.h  my_commands.cpp
old_bg/test/: bg.cc  calculated_values.gdt  gating.cc  main  solve.cc  solve.h  spannung.cc  spannung.h
old_bg/test/.deps/: spannung.P
unit_tests/data/: timestep0.000000.csv
unit_tests/inc/: fixtures.cpp  unit_test_helper.h
unit_tests/src/: basic_tests.cpp  basic_tests_default_vm2ug.cpp  basic_tests_simple.cpp  tests.cpp
